fixed system libs for win32; fixed interface include directory

--- a/librtmp/CMakeLists.txt
+++ b/librtmp/CMakeLists.txt
@@ -35,6 +35,7 @@ if(WIN32)
 	list(APPEND systemlibs
 		"wsock32"
 		"ws2_32"
+		"winmm"
 		)
 endif()
 
@@ -50,5 +51,5 @@ set_target_properties(librtmp PROPERTIES
 	INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR};${OPENSSL_INCLUDE_DIR}"
 	COMPILE_DEFINITIONS "${definitions}"
 #	INTERFACE_COMPILE_DEFINITIONS "${interface_definitions}"
-	INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
+	INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/.."
 	)
