better handling of zlib dep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-if(WIN32 AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/vendor/zlib)
-	set(BUILD_ZLIB_EXAMPLE CACHE BOOL OFF)	
-	set(BUILD_MINIGZIP CACHE BOOL OFF)
-	add_subdirectory(vendor/zlib)
+if(WIN32)
+	if(NOT TARGET zlib)
+		set(BUILD_ZLIB_EXAMPLE CACHE BOOL OFF)	
+		set(BUILD_MINIGZIP CACHE BOOL OFF)
+		add_subdirectory(vendor/zlib)
+	endif()
+
 	set(ZLIB_LIBRARIES zlib)
 else()
 	find_package(ZLIB REQUIRED)
