define RTMP_EXPORT on linux to be empty; empty prefix for librtmp

--- a/librtmp/CMakeLists.txt
+++ b/librtmp/CMakeLists.txt
@@ -63,4 +63,5 @@ set_target_properties(librtmp PROPERTIES
 	COMPILE_DEFINITIONS "${definitions}"
 	INTERFACE_COMPILE_DEFINITIONS "${public_definitions}"
 	INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/.."
+	PREFIX ""
 	)
